--- a/index.html
+++ b/index.html
@@ -4,9 +4,83 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Hola mundo</h1>
+
+
+    <div id="Header">
+        <div class="contenedor">
+            <div class="text-box box">
+                <div class="info">
+                    <h3 id="Link">danielurzola.com</h3>
+                    <p id="cursos">Welcome to my page</p>
+                    <div class="text">
+                        <p>Lorem 1 ipsum dolor sit, amet consectetur adipisicing elit. Non vel, ipsum 
+                        minus quisquam debitis tempora cupiditate saepe. Non adipisci numquam 
+                        nobis illo commodi ad omnis pariatur quod dicta laudantium. <br> Officia 
+                        doloribus molestias, dolore saepe nobis quisquam eum nihil dolores 
+                        provident. Quos quas laboriosam necessitatibus similique expedita optio 
+                        iste deserunt fugit.</p>
+                        <p>Lorem 2 ipsum dolor sit, amet consectetur adipisicing elit. Non vel, ipsum 
+                        minus quisquam debitis tempora cupiditate saepe. Non adipisci numquam 
+                        nobis illo commodi ad omnis pariatur quod dicta laudantium. <br> Officia 
+                        doloribus molestias, dolore saepe nobis quisquam eum nihil dolores 
+                        provident. Quos quas laboriosam necessitatibus similique expedita optio 
+                        iste deserunt fugit.</p>
+                        <p>Lorem 3 ipsum dolor sit, amet consectetur adipisicing elit. Non vel, ipsum 
+                        minus quisquam debitis tempora cupiditate saepe. Non adipisci numquam 
+                        nobis illo commodi ad omnis pariatur quod dicta laudantium. <br> Officia 
+                        doloribus molestias, dolore saepe nobis quisquam eum nihil dolores 
+                        provident. Quos quas laboriosam necessitatibus similique expedita optio 
+                        iste deserunt fugit.</p>
+                    </div>
+                </div>
+                <div class="tabs">
+                    <span>tab 1</span>
+                    <span>tab 2</span>
+                    <span>tab 3</span>
+                </div>
+            </div>
+            <div class="tech-box box">
+                <div class="title">
+                    <h3>Tecnologies i work with</h3>
+                </div>
+                <div class="techs">
+                    <div class="logo html">
+                        <img src="imagenes/file_type_html_icon_130541.svg" alt="">
+                    </div>
+                    <div class="logo css">
+                        <img src="imagenes/file_type_css_icon_130661.svg" alt="">
+                    </div>
+                    <div class="logo js">
+                        <img src="imagenes/javascript_original_logo_icon_146455.svg" alt="">
+                    </div>
+                    <div class="logo react">
+                        <img src="imagenes/react_original_logo_icon_146374.svg" alt="">
+                    </div>
+                    <div class="logo sass">
+                        <img src="imagenes/file_type_sass_icon_130182.svg" alt="">
+                    </div>
+                    <div class="logo git">
+                        <img src="imagenes/file_type_git_icon_130581.svg" alt="">
+                    </div>
+                    <div class="logo tailwind">
+                        <img src="imagenes/file_type_tailwind_icon_130128.svg" alt="">
+                    </div>
+                    <div class="logo bootstrap">
+                        <img src="imagenes/bootstrap_plain_logo_icon_146619.svg" alt="">
+                    </div>
+                    <div class="logo figma">
+                        <img src="imagenes/figma_logo_icon_170157.svg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <script src="script.js"></script>
 </body>
 </html>
