--- a/index.html
+++ b/index.html
@@ -14,38 +14,52 @@
         <div class="contenedor">
             <div class="text-box box">
                 <div class="info">
-                    <h3 id="Link">danielurzola.com</h3>
-                    <p id="cursos">Welcome to my page</p>
+                    <div class="link-title">
+                        <h3 class="anim-text domain">danielurzola.com</h3>
+                    </div>
+                    <p class="anim-text typetext">Welcome to <span id="textType"></span></p>
                     <div class="text">
                         <p>Lorem 1 ipsum dolor sit, amet consectetur adipisicing elit. Non vel, ipsum 
                         minus quisquam debitis tempora cupiditate saepe. Non adipisci numquam 
-                        nobis illo commodi ad omnis pariatur quod dicta laudantium. <br> Officia 
+                        nobis illo commodi ad omnis pariatur quod dicta laudantium. <br><br> Officia 
+                        doloribus molestias, dolore saepe nobis quisquam eum nihil dolores 
+                        provident. Quos quas laboriosam necessitatibus similique expedita optio 
+                        iste deserunt fugit. <br><br> Officia 
                         doloribus molestias, dolore saepe nobis quisquam eum nihil dolores 
                         provident. Quos quas laboriosam necessitatibus similique expedita optio 
                         iste deserunt fugit.</p>
                         <p>Lorem 2 ipsum dolor sit, amet consectetur adipisicing elit. Non vel, ipsum 
                         minus quisquam debitis tempora cupiditate saepe. Non adipisci numquam 
-                        nobis illo commodi ad omnis pariatur quod dicta laudantium. <br> Officia 
+                        nobis illo commodi ad omnis pariatur quod dicta laudantium. <br><br> Officia 
+                        doloribus molestias, dolore saepe nobis quisquam eum nihil dolores 
+                        provident. Quos quas laboriosam necessitatibus similique expedita optio 
+                        iste deserunt fugit. <br><br> Officia 
                         doloribus molestias, dolore saepe nobis quisquam eum nihil dolores 
                         provident. Quos quas laboriosam necessitatibus similique expedita optio 
                         iste deserunt fugit.</p>
                         <p>Lorem 3 ipsum dolor sit, amet consectetur adipisicing elit. Non vel, ipsum 
                         minus quisquam debitis tempora cupiditate saepe. Non adipisci numquam 
-                        nobis illo commodi ad omnis pariatur quod dicta laudantium. <br> Officia 
+                        nobis illo commodi ad omnis pariatur quod dicta laudantium. <br><br> Officia 
+                        doloribus molestias, dolore saepe nobis quisquam eum nihil dolores 
+                        provident. Quos quas laboriosam necessitatibus similique expedita optio 
+                        iste deserunt fugit. <br><br> Officia 
                         doloribus molestias, dolore saepe nobis quisquam eum nihil dolores 
                         provident. Quos quas laboriosam necessitatibus similique expedita optio 
                         iste deserunt fugit.</p>
                     </div>
                 </div>
+                <div id="CV">
+                    <a href="">Download my CV</a>
+                </div>
                 <div class="tabs">
-                    <span>tab 1</span>
-                    <span>tab 2</span>
-                    <span>tab 3</span>
+                    <span>About me</span>
+                    <span>Work ethic</span>
+                    <span>Hobbies</span>
                 </div>
             </div>
             <div class="tech-box box">
                 <div class="title">
-                    <h3>Tecnologies i work with</h3>
+                    <h3 class="anim-text tech-title">Tecnologies i work with</h3>
                 </div>
                 <div class="techs">
                     <div class="logo html">
@@ -81,6 +95,7 @@
     </div>
 
 
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="script.js"></script>
 </body>
 </html>
