--- a/index.html
+++ b/index.html
@@ -1,101 +1,260 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-</head>
-<body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="style.css" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+		/>
+		<title>Document</title>
+	</head>
+	<body>
+		<main>
+			<div id="Header">
+				<div class="contenedor">
+					<div class="text-box box">
+						<div class="info">
+							<div class="link-title">
+								<h3 class="anim-text domain">danielurzola.com</h3>
+							</div>
+							<p class="anim-text typetext">Welcome to <span id="textType"></span></p>
+							<div class="text">
+								<p>
+									Lorem 1 ipsum dolor sit, amet consectetur adipisicing elit. Non vel,
+									ipsum minus quisquam debitis tempora cupiditate saepe. Non adipisci
+									numquam nobis illo commodi ad omnis pariatur quod dicta laudantium.
+									<br /><br />
+									Officia doloribus molestias, dolore saepe nobis quisquam eum nihil
+									dolores provident. Quos quas laboriosam necessitatibus similique
+									expedita optio iste deserunt fugit. <br /><br />
+									Officia doloribus molestias, dolore saepe nobis quisquam eum nihil
+									dolores provident. Quos quas laboriosam necessitatibus similique
+									expedita optio iste deserunt fugit.
+								</p>
+								<p>
+									Lorem 2 ipsum dolor sit, amet consectetur adipisicing elit. Non vel,
+									ipsum minus quisquam debitis tempora cupiditate saepe. Non adipisci
+									numquam nobis illo commodi ad omnis pariatur quod dicta laudantium.
+									<br /><br />
+									Officia doloribus molestias, dolore saepe nobis quisquam eum nihil
+									dolores provident. Quos quas laboriosam necessitatibus similique
+									expedita optio iste deserunt fugit. <br /><br />
+									Officia doloribus molestias, dolore saepe nobis quisquam eum nihil
+									dolores provident. Quos quas laboriosam necessitatibus similique
+									expedita optio iste deserunt fugit.
+								</p>
+								<p>
+									Lorem 3 ipsum dolor sit, amet consectetur adipisicing elit. Non vel,
+									ipsum minus quisquam debitis tempora cupiditate saepe. Non adipisci
+									numquam nobis illo commodi ad omnis pariatur quod dicta laudantium.
+									<br /><br />
+									Officia doloribus molestias, dolore saepe nobis quisquam eum nihil
+									dolores provident. Quos quas laboriosam necessitatibus similique
+									expedita optio iste deserunt fugit. <br /><br />
+									Officia doloribus molestias, dolore saepe nobis quisquam eum nihil
+									dolores provident. Quos quas laboriosam necessitatibus similique
+									expedita optio iste deserunt fugit.
+								</p>
+							</div>
+						</div>
+						<div id="CV">
+							<a href="">Download my CV</a>
+						</div>
+						<div class="tabs">
+							<span>About me</span>
+							<span>Work ethic</span>
+							<span>Hobbies</span>
+						</div>
+					</div>
+					<div class="tech-box box">
+						<div class="title">
+							<h3 class="anim-text tech-title">Tecnologies i work with</h3>
+						</div>
+						<div class="techs">
+							<div class="logo html">
+								<img src="imagenes/file_type_html_icon_130541.svg" alt="" />
+							</div>
+							<div class="logo css">
+								<img src="imagenes/file_type_css_icon_130661.svg" alt="" />
+							</div>
+							<div class="logo js">
+								<img src="imagenes/javascript_original_logo_icon_146455.svg" alt="" />
+							</div>
+							<div class="logo react">
+								<img src="imagenes/react_original_logo_icon_146374.svg" alt="" />
+							</div>
+							<div class="logo sass">
+								<img src="imagenes/file_type_sass_icon_130182.svg" alt="" />
+							</div>
+							<div class="logo git">
+								<img src="imagenes/file_type_git_icon_130581.svg" alt="" />
+							</div>
+							<div class="logo tailwind">
+								<img src="imagenes/file_type_tailwind_icon_130128.svg" alt="" />
+							</div>
+							<div class="logo bootstrap">
+								<img src="imagenes/bootstrap_plain_logo_icon_146619.svg" alt="" />
+							</div>
+							<div class="logo figma">
+								<img src="imagenes/figma_logo_icon_170157.svg" alt="" />
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 
 
-    <div id="Header">
-        <div class="contenedor">
-            <div class="text-box box">
-                <div class="info">
-                    <div class="link-title">
-                        <h3 class="anim-text domain">danielurzola.com</h3>
+
+
+			<div id="Projects">
+				<div class="title">
+					<span><i class="fa-brands fa-react"></i> Front-End Projects</span>
+				</div>
+                <div class="contenedor">
+                    <div class="box">
+                        <div class="header">
+                            <img src="imagenes/Captura de pantalla 2023-01-06 041714.jpg" alt="">
+                        </div>
+                        <div class="body">
+                            <p class="title">Projecto 1</p>
+                            <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                            Praesentium distinctio dolore sunt est quae iure esse minima assumenda 
+                            dignissimos perferendis!</p>
+                        </div>
                     </div>
-                    <p class="anim-text typetext">Welcome to <span id="textType"></span></p>
-                    <div class="text">
-                        <p>Lorem 1 ipsum dolor sit, amet consectetur adipisicing elit. Non vel, ipsum 
-                        minus quisquam debitis tempora cupiditate saepe. Non adipisci numquam 
-                        nobis illo commodi ad omnis pariatur quod dicta laudantium. <br><br> Officia 
-                        doloribus molestias, dolore saepe nobis quisquam eum nihil dolores 
-                        provident. Quos quas laboriosam necessitatibus similique expedita optio 
-                        iste deserunt fugit. <br><br> Officia 
-                        doloribus molestias, dolore saepe nobis quisquam eum nihil dolores 
-                        provident. Quos quas laboriosam necessitatibus similique expedita optio 
-                        iste deserunt fugit.</p>
-                        <p>Lorem 2 ipsum dolor sit, amet consectetur adipisicing elit. Non vel, ipsum 
-                        minus quisquam debitis tempora cupiditate saepe. Non adipisci numquam 
-                        nobis illo commodi ad omnis pariatur quod dicta laudantium. <br><br> Officia 
-                        doloribus molestias, dolore saepe nobis quisquam eum nihil dolores 
-                        provident. Quos quas laboriosam necessitatibus similique expedita optio 
-                        iste deserunt fugit. <br><br> Officia 
-                        doloribus molestias, dolore saepe nobis quisquam eum nihil dolores 
-                        provident. Quos quas laboriosam necessitatibus similique expedita optio 
-                        iste deserunt fugit.</p>
-                        <p>Lorem 3 ipsum dolor sit, amet consectetur adipisicing elit. Non vel, ipsum 
-                        minus quisquam debitis tempora cupiditate saepe. Non adipisci numquam 
-                        nobis illo commodi ad omnis pariatur quod dicta laudantium. <br><br> Officia 
-                        doloribus molestias, dolore saepe nobis quisquam eum nihil dolores 
-                        provident. Quos quas laboriosam necessitatibus similique expedita optio 
-                        iste deserunt fugit. <br><br> Officia 
-                        doloribus molestias, dolore saepe nobis quisquam eum nihil dolores 
-                        provident. Quos quas laboriosam necessitatibus similique expedita optio 
-                        iste deserunt fugit.</p>
+                    <div class="box">
+                        <div class="header">
+                            <img src="imagenes/Captura de pantalla 2023-01-06 042634.jpg" alt="">
+                        </div>
+                        <div class="body">
+                            <p class="title">Projecto 1</p>
+                            <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                            Praesentium distinctio dolore sunt est quae iure esse minima assumenda 
+                            dignissimos perferendis!</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="header">
+                            <img src="imagenes/Captura de pantalla 2023-01-06 043541.jpg" alt="">
+                        </div>
+                        <div class="body">
+                            <p class="title">Projecto 1</p>
+                            <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                            Praesentium distinctio dolore sunt est quae iure esse minima assumenda 
+                            dignissimos perferendis!</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="header">
+                            <img src="imagenes/Captura de pantalla 2023-01-06 043733.jpg" alt="">
+                        </div>
+                        <div class="body">
+                            <p class="title">Projecto 1</p>
+                            <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                            Praesentium distinctio dolore sunt est quae iure esse minima assumenda 
+                            dignissimos perferendis!</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="header">
+                            <img src="imagenes/Captura-Pb.PNG" alt="">
+                        </div>
+                        <div class="body">
+                            <p class="title">Projecto 1</p>
+                            <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                            Praesentium distinctio dolore sunt est quae iure esse minima assumenda 
+                            dignissimos perferendis!</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="header">
+                            <img src="imagenes/Captura-Loans.PNG" alt="">
+                        </div>
+                        <div class="body">
+                            <p class="title">Projecto 1</p>
+                            <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                            Praesentium distinctio dolore sunt est quae iure esse minima assumenda 
+                            dignissimos perferendis!</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="header">
+                            <img src="imagenes/Captura-Weather.PNG" alt="">
+                        </div>
+                        <div class="body">
+                            <p class="title">Projecto 1</p>
+                            <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                            Praesentium distinctio dolore sunt est quae iure esse minima assumenda 
+                            dignissimos perferendis!</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="header">
+                            <img src="imagenes/Captura-Insurance.PNG" alt="">
+                        </div>
+                        <div class="body">
+                            <p class="title">Projecto 1</p>
+                            <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                            Praesentium distinctio dolore sunt est quae iure esse minima assumenda 
+                            dignissimos perferendis!</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="header">
+                            <img src="imagenes/Captura-Portfolio.PNG" alt="">
+                        </div>
+                        <div class="body">
+                            <p class="title">This Portfolio :)</p>
+                            <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                            Praesentium distinctio dolore sunt est quae iure esse minima assumenda 
+                            dignissimos perferendis!</p>
+                        </div>
                     </div>
                 </div>
-                <div id="CV">
-                    <a href="">Download my CV</a>
-                </div>
-                <div class="tabs">
-                    <span>About me</span>
-                    <span>Work ethic</span>
-                    <span>Hobbies</span>
+			</div>
+
+
+            <div id="Social">
+                <div class="contenedor">
+                    <div class="title">
+                        <p>My Social Networks</p>
+                    </div>
+                    <div class="redes">
+                        <a href="www.google.com" class="github">
+                            <span><i class="fa-brands fa-github"></i></span>
+                        </a>
+                        <a href="www.google.com" class="linkedin">
+                            <span><i class="fa-brands fa-linkedin-in"></i></span>
+                        </a>
+                        <a href="www.google.com" class="reddit">
+                            <span><i class="fa-brands fa-reddit"></i></span>
+                        </a>
+                    </div>
                 </div>
             </div>
-            <div class="tech-box box">
-                <div class="title">
-                    <h3 class="anim-text tech-title">Tecnologies i work with</h3>
-                </div>
-                <div class="techs">
-                    <div class="logo html">
-                        <img src="imagenes/file_type_html_icon_130541.svg" alt="">
+
+
+            <div id="Contacto">
+                <div class="contenedor">
+                    <div class="title">
+                        <p>contact me</p>
                     </div>
-                    <div class="logo css">
-                        <img src="imagenes/file_type_css_icon_130661.svg" alt="">
-                    </div>
-                    <div class="logo js">
-                        <img src="imagenes/javascript_original_logo_icon_146455.svg" alt="">
-                    </div>
-                    <div class="logo react">
-                        <img src="imagenes/react_original_logo_icon_146374.svg" alt="">
-                    </div>
-                    <div class="logo sass">
-                        <img src="imagenes/file_type_sass_icon_130182.svg" alt="">
-                    </div>
-                    <div class="logo git">
-                        <img src="imagenes/file_type_git_icon_130581.svg" alt="">
-                    </div>
-                    <div class="logo tailwind">
-                        <img src="imagenes/file_type_tailwind_icon_130128.svg" alt="">
-                    </div>
-                    <div class="logo bootstrap">
-                        <img src="imagenes/bootstrap_plain_logo_icon_146619.svg" alt="">
-                    </div>
-                    <div class="logo figma">
-                        <img src="imagenes/figma_logo_icon_170157.svg" alt="">
-                    </div>
+                    <form id="Form">
+                        
+                    </form>
                 </div>
             </div>
-        </div>
-    </div>
 
+            
+		</main>
+            <footer id="Footer">
 
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script src="script.js"></script>
-</body>
+            </footer>
+
+		<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+		<script src="script.js"></script>
+	</body>
 </html>
