--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
 							<p class="anim-text typetext">Welcome to <span id="textType"></span></p>
 							<div class="text">
 								<p>
-									Lorem 1 ipsum dolor sit, amet consectetur adipisicing elit. Non vel,
-									ipsum minus quisquam debitis tempora cupiditate saepe. Non adipisci
-									numquam nobis illo commodi ad omnis pariatur quod dicta laudantium.
+									Hello! My name is Daniel Urzola, i am a 26 y/o man who lives in 
+                                    Cartagena, Colombia, I'm a Self-Taught React Front End Developer,
+                                    My Journey started 2 years ago in pandemic, in my free time i started
+                                    learning HTML, CSS & Js as a Hobbie but ended up liking it and starded
+                                    doing websites for friends and family
 									<br /><br />
 									Officia doloribus molestias, dolore saepe nobis quisquam eum nihil
 									dolores provident. Quos quas laboriosam necessitatibus similique
@@ -114,12 +116,12 @@
 					<span><i class="fa-brands fa-react"></i> Front-End Projects</span>
 				</div>
                 <div class="contenedor">
-                    <div class="box">
+                    <div class="box expenses">
                         <div class="header">
                             <img src="imagenes/Captura de pantalla 2023-01-06 041714.jpg" alt="">
                         </div>
                         <div class="body">
-                            <p class="title">Projecto 1</p>
+                            <p class="title">Expenses Checker</p>
                             <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                             Praesentium distinctio dolore sunt est quae iure esse minima assumenda 
                             dignissimos perferendis!</p>
@@ -130,7 +132,7 @@
                             <img src="imagenes/Captura de pantalla 2023-01-06 042634.jpg" alt="">
                         </div>
                         <div class="body">
-                            <p class="title">Projecto 1</p>
+                            <p class="title">Cripto Converter</p>
                             <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                             Praesentium distinctio dolore sunt est quae iure esse minima assumenda 
                             dignissimos perferendis!</p>
@@ -141,7 +143,7 @@
                             <img src="imagenes/Captura de pantalla 2023-01-06 043541.jpg" alt="">
                         </div>
                         <div class="body">
-                            <p class="title">Projecto 1</p>
+                            <p class="title">Vet Patients</p>
                             <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                             Praesentium distinctio dolore sunt est quae iure esse minima assumenda 
                             dignissimos perferendis!</p>
@@ -152,7 +154,7 @@
                             <img src="imagenes/Captura de pantalla 2023-01-06 043733.jpg" alt="">
                         </div>
                         <div class="body">
-                            <p class="title">Projecto 1</p>
+                            <p class="title">Food Recipes</p>
                             <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                             Praesentium distinctio dolore sunt est quae iure esse minima assumenda 
                             dignissimos perferendis!</p>
@@ -163,7 +165,7 @@
                             <img src="imagenes/Captura-Pb.PNG" alt="">
                         </div>
                         <div class="body">
-                            <p class="title">Projecto 1</p>
+                            <p class="title">Image Finder API</p>
                             <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                             Praesentium distinctio dolore sunt est quae iure esse minima assumenda 
                             dignissimos perferendis!</p>
@@ -174,7 +176,7 @@
                             <img src="imagenes/Captura-Loans.PNG" alt="">
                         </div>
                         <div class="body">
-                            <p class="title">Projecto 1</p>
+                            <p class="title">Loan Page</p>
                             <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                             Praesentium distinctio dolore sunt est quae iure esse minima assumenda 
                             dignissimos perferendis!</p>
@@ -185,7 +187,7 @@
                             <img src="imagenes/Captura-Weather.PNG" alt="">
                         </div>
                         <div class="body">
-                            <p class="title">Projecto 1</p>
+                            <p class="title">Weather API</p>
                             <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                             Praesentium distinctio dolore sunt est quae iure esse minima assumenda 
                             dignissimos perferendis!</p>
@@ -196,7 +198,7 @@
                             <img src="imagenes/Captura-Insurance.PNG" alt="">
                         </div>
                         <div class="body">
-                            <p class="title">Projecto 1</p>
+                            <p class="title">insurance Page</p>
                             <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                             Praesentium distinctio dolore sunt est quae iure esse minima assumenda 
                             dignissimos perferendis!</p>
@@ -240,7 +242,7 @@
             <div id="Contacto">
                 <div class="contenedor">
                     <div class="title">
-                        <p>contact me</p>
+                        <p></p>
                     </div>
                     <form id="Form">
                         
@@ -255,6 +257,6 @@
             </footer>
 
 		<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-		<script src="script.js"></script>
+		<script type="module" src="script.js"></script>
 	</body>
 </html>
