--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<div class="tabs">
 							<span>About me</span>
 							<span>Work ethic</span>
-							<span>Hobbies</span>
+							<span>My Hobbies</span>
 						</div>
 					</div>
 					<div class="tech-box box">
@@ -127,7 +127,7 @@
                             dignissimos perferendis!</p>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box cripto">
                         <div class="header">
                             <img src="imagenes/Captura de pantalla 2023-01-06 042634.jpg" alt="">
                         </div>
@@ -138,7 +138,7 @@
                             dignissimos perferendis!</p>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box vet">
                         <div class="header">
                             <img src="imagenes/Captura de pantalla 2023-01-06 043541.jpg" alt="">
                         </div>
@@ -149,7 +149,7 @@
                             dignissimos perferendis!</p>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box recipes">
                         <div class="header">
                             <img src="imagenes/Captura de pantalla 2023-01-06 043733.jpg" alt="">
                         </div>
@@ -160,7 +160,7 @@
                             dignissimos perferendis!</p>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box imgapi">
                         <div class="header">
                             <img src="imagenes/Captura-Pb.PNG" alt="">
                         </div>
@@ -171,7 +171,7 @@
                             dignissimos perferendis!</p>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box loans">
                         <div class="header">
                             <img src="imagenes/Captura-Loans.PNG" alt="">
                         </div>
@@ -182,7 +182,7 @@
                             dignissimos perferendis!</p>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box weather">
                         <div class="header">
                             <img src="imagenes/Captura-Weather.PNG" alt="">
                         </div>
@@ -193,7 +193,7 @@
                             dignissimos perferendis!</p>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box insurance">
                         <div class="header">
                             <img src="imagenes/Captura-Insurance.PNG" alt="">
                         </div>
@@ -204,7 +204,7 @@
                             dignissimos perferendis!</p>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box portfolio">
                         <div class="header">
                             <img src="imagenes/Captura-Portfolio.PNG" alt="">
                         </div>
