before deleting hobbies

--- a/index.html
+++ b/index.html
@@ -27,35 +27,37 @@
                                     Cartagena, Colombia, I'm a Self-Taught React Front End Developer,
                                     My Journey started 2 years ago in pandemic, in my free time i started
                                     learning HTML, CSS & Js as a Hobbie but ended up liking it and starded
-                                    doing websites for friends and family
-									<br /><br />
-									Officia doloribus molestias, dolore saepe nobis quisquam eum nihil
-									dolores provident. Quos quas laboriosam necessitatibus similique
-									expedita optio iste deserunt fugit. <br /><br />
-									Officia doloribus molestias, dolore saepe nobis quisquam eum nihil
-									dolores provident. Quos quas laboriosam necessitatibus similique
-									expedita optio iste deserunt fugit.
+                                    doing websites for friends and family.
+									<br /><br/>
+									Last year meanwhile i was working as a call center agent in an US company 
+                                    asisting Uber drivers i was studyng React and making projects at the same 
+                                    time just in order for me to get enough experience and knowledge to get 
+                                    hired as a front-end dev in an outborder compamy  . <br/><br/>
+									I really believe i have enough knowledge in React and other related techs 
+                                    to add value to any dev company i'd be working with.
 								</p>
 								<p>
-									Lorem 2 ipsum dolor sit, amet consectetur adipisicing elit. Non vel,
-									ipsum minus quisquam debitis tempora cupiditate saepe. Non adipisci
-									numquam nobis illo commodi ad omnis pariatur quod dicta laudantium.
-									<br /><br />
-									Officia doloribus molestias, dolore saepe nobis quisquam eum nihil
-									dolores provident. Quos quas laboriosam necessitatibus similique
-									expedita optio iste deserunt fugit. <br /><br />
-									Officia doloribus molestias, dolore saepe nobis quisquam eum nihil
-									dolores provident. Quos quas laboriosam necessitatibus similique
-									expedita optio iste deserunt fugit.
+									I always do my best to exceed expectations in everything i do, including 
+                                    this dev journey i got myself into, i always try to do the best i can in
+                                    the shortest time possible, i have never liked to do mediocre jobs,
+                                    everything needs to be perfect or i am not confortable with the outcome, i 
+                                    am very meticulous with details.
+									<br/><br/>
+									You can clearly see that in all the projects below i have made, i always 
+                                    make sure everything fits perfecly, the UI and the UX, in top of that it
+                                    needs to look and feel good in every device it's been displayed, that's 
+                                    vital. This portfolio is also made all by myself from scratch 
+                                    because  i wanted to give a great impression <br/><br/>
+									So i really believe that my sense of work, responsability, effectiveness 
+                                    and efficiency could be benefitial to any dev company i'd start working 
+                                    with .
 								</p>
 								<p>
-									Lorem 3 ipsum dolor sit, amet consectetur adipisicing elit. Non vel,
-									ipsum minus quisquam debitis tempora cupiditate saepe. Non adipisci
-									numquam nobis illo commodi ad omnis pariatur quod dicta laudantium.
-									<br /><br />
-									Officia doloribus molestias, dolore saepe nobis quisquam eum nihil
-									dolores provident. Quos quas laboriosam necessitatibus similique
-									expedita optio iste deserunt fugit. <br /><br />
+									In my free time i like to do plenty of activities, i like going for a walk,
+                                    i like spending time with friends and family, i like to spend time with my
+                                    dog taking him for a walk in the beach every weekend.
+									<br/><br/>
+									Involving activities related with excersises i like going to the gym 4 days a week, sometimes also i like to jog in a park near by my house, . <br /><br />
 									Officia doloribus molestias, dolore saepe nobis quisquam eum nihil
 									dolores provident. Quos quas laboriosam necessitatibus similique
 									expedita optio iste deserunt fugit.
@@ -133,9 +135,10 @@
                         </div>
                         <div class="body">
                             <p class="title">Cripto Converter</p>
-                            <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                            Praesentium distinctio dolore sunt est quae iure esse minima assumenda 
-                            dignissimos perferendis!</p>
+                            <p class="text">Lorem ipsum dolor sit, amet consectetur
+                            adipisicing elit.
+                            Praesentium distinctio dolore sunt est quae iure esse 
+                            minima assumenda dignissimos perferendis!</p>
                         </div>
                     </div>
                     <div class="box vet">
